# PET_A2A--secure

./: .env.example  .gitignore  README.md  agents_config.json  config.json  test_token_workflow.py
agents/appointments_agent/: __main__.py  agent.py  executor.py  middleware.py  pyproject.toml  requirements.txt
agents/orchestrator_agent/: __main__.py  agent.py  browser_auth.py  pyproject.toml  requirements.txt
agents/vaccination_agent/: __main__.py  agent.py  executor.py  middleware.py  requirements.txt
appoinments/: __main__.py  agent_with_token.py  executor.py  middleware.py
docs/: asgardeo-scope-configuration.md  sequence-diagram.md
orchestrator/: agent.py  auth.py  browser_auth.py  client_auth.py  token_exchange.py  user_auth.py
vaccination/: __main__.py  agent_with_token.py  executor.py  middleware.py  pyproject.toml
